--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ openai.api.key=${OPEN_AI_API_KEY}
 openai.model=${OPEN_AI_MODEL}
 
 server.port=8070
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
